--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
   }
 }
